add form for users to ask questions

--- a/ui/meetup/index.html
+++ b/ui/meetup/index.html
@@ -10,6 +10,7 @@
     />
 
     <link rel="stylesheet" href="../assets/css/main.css" />
+      <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
   </head>
 
   <body>
@@ -49,6 +50,16 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur corporis delectus dolores esse ex
                   illum itaque nam nostrum quae, quibusdam, reiciendis,
                   repellendus reprehenderit repudiandae sapiente soluta unde voluptatum? Eos.</p>
+
+              <br>
+
+              <h3>Any Questions?</h3>
+              <div class="grid-item ask">
+                  <form>
+                      <textarea placeholder="Your question..."></textarea>
+                      <button onclick="">Ask</button>
+                  </form>
+              </div>
           </div>
           <div class="grid-item aside">
               <p><img src="../assets/img/person_1.jpg" alt="host">Hosted by <span id="host">Jane Doe</span></p>
