--- a/ui/meetup/index.html
+++ b/ui/meetup/index.html
@@ -60,6 +60,59 @@
                       <button onclick="">Ask</button>
                   </form>
               </div>
+
+              <div class="flex" id="question" onclick="location.href = 'question/';">
+                  <div class="vote">
+                      <div class="up" onclick="upVote">
+                          <i class="fa fa-caret-up fa-2x" aria-hidden="true"></i>
+                      </div>
+                      <div class="votes">23</div>
+                      <div class="down" onclick="downVote">
+                          <i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>
+                      </div>
+                  </div>
+                  <div class="profile">
+                      <img src="../assets/img/person_1.jpg" alt="host" />
+                  </div>
+                  <div class="question-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur assumenda consequatu...</p>
+                  </div>
+              </div>
+              <div class="flex" id="question" onclick="location.href = 'question/';">
+                  <div class="vote">
+                      <div class="up" onclick="upVote">
+                          <i class="fa fa-caret-up fa-2x" aria-hidden="true"></i>
+                      </div>
+                      <div class="votes">23</div>
+                      <div class="down" onclick="downVote">
+                          <i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>
+                      </div>
+                  </div>
+                  <div class="profile">
+                      <img src="../assets/img/person_1.jpg" alt="host" />
+                  </div>
+                  <div class="question-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur assumenda consequatu...</p>
+                  </div>
+              </div>
+              <div class="flex" id="question" onclick="location.href = 'question/';">
+                  <div class="vote">
+                      <div class="up" onclick="upVote">
+                          <i class="fa fa-caret-up fa-2x" aria-hidden="true"></i>
+                      </div>
+                      <div class="votes">23</div>
+                      <div class="down" onclick="downVote">
+                          <i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>
+                      </div>
+                  </div>
+                  <div class="profile">
+                      <img src="../assets/img/person_1.jpg" alt="host" />
+                  </div>
+                  <div class="question-body">
+                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur assumenda consequatu...</p>
+                  </div>
+              </div>
+              <div class="flex down"></div>
           </div>
           <div class="grid-item aside">
               <p><img src="../assets/img/person_1.jpg" alt="host">Hosted by <span id="host">Jane Doe</span></p>
