[starts #163141440] remove lorem text from home page

--- a/ui/index.html
+++ b/ui/index.html
@@ -32,15 +32,14 @@
 
     <div class="container">
       <div id="home">
-          <h2 class="title">Latest Meetups</h2>
+          <h2 class="title">Upcoming Meetups</h2>
           <div class="meetups">
               <div class="grid-item main">
                   <img src="assets/img/image_4.jpg" alt="meetup image">
                   <div class="text-block">
                       <small>date</small>
                       <a href="meetup/"><h2>Main Meetup</h2></a>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet asperiores debitis error, ex impedit iusto laboriosam minus
-                          nemo, neque nihil praesentium quibusdam recusandae reiciendis repudiandae, saepe sequi sint ut voluptatibus.</p>
+                      <p>This is a main meetup and will be featured at the top of the upcoming meetups page</p>
                   </div>
               </div>
               <div class="grid-item featured">
