--- a/ui/meetup/index.html
+++ b/ui/meetup/index.html
@@ -44,12 +44,7 @@
           </div>
           <div class="grid-item details">
               <h3>Details</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur corporis delectus dolores esse ex
-                  illum itaque nam nostrum quae, quibusdam, reiciendis,
-                  repellendus reprehenderit repudiandae sapiente soluta unde voluptatum? Eos.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam aspernatur corporis delectus dolores esse ex
-                  illum itaque nam nostrum quae, quibusdam, reiciendis,
-                  repellendus reprehenderit repudiandae sapiente soluta unde voluptatum? Eos.</p>
+              <p>This is a main meetup featured at the top of the upcoming meetups page.</p>
 
               <br>
 
@@ -75,7 +70,7 @@
                       <img src="../assets/img/person_1.jpg" alt="host" />
                   </div>
                   <div class="question-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur assumenda consequatu...</p>
+                      <p>Where exactly will this meetup be?</p>
                   </div>
               </div>
               <div class="flex" id="question" onclick="location.href = 'question/';">
@@ -92,24 +87,7 @@
                       <img src="../assets/img/person_1.jpg" alt="host" />
                   </div>
                   <div class="question-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur assumenda consequatu...</p>
-                  </div>
-              </div>
-              <div class="flex" id="question" onclick="location.href = 'question/';">
-                  <div class="vote">
-                      <div class="up" onclick="upVote">
-                          <i class="fa fa-caret-up fa-2x" aria-hidden="true"></i>
-                      </div>
-                      <div class="votes">23</div>
-                      <div class="down" onclick="downVote">
-                          <i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>
-                      </div>
-                  </div>
-                  <div class="profile">
-                      <img src="../assets/img/person_1.jpg" alt="host" />
-                  </div>
-                  <div class="question-body">
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Alias aspernatur assumenda consequatu...</p>
+                      <p>Will lunch be provided?</p>
                   </div>
               </div>
               <div class="flex down"></div>
