--- a/ui/meetup/question/index.html
+++ b/ui/meetup/question/index.html
@@ -49,9 +49,7 @@
                     <small id="author">Author</small>
                 </div>
                 <div class="question-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto autem consequuntur delectus enim error hic
-                        iusto necessitatibus quae quibusdam,
-                        quo, rerum totam voluptatum? Commodi officiis possimus quam quisquam sapiente!</p>
+                    <p>Where exactly will this meetup be?</p>
                 </div>
             </div>
 
@@ -61,9 +59,7 @@
                     <small id="author">Author</small>
                 </div>
                 <div class="answer-body">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto autem consequuntur delectus enim error hic
-                        iusto necessitatibus quae quibusdam,
-                        quo, rerum totam voluptatum? Commodi officiis possimus quam quisquam sapiente!</p>
+                    <p>At Andela offices, behind TRM</p>
                 </div>
             </div>
         <div class="flex" id="answer">
@@ -72,20 +68,7 @@
                 <small id="author">Author</small>
             </div>
             <div class="answer-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto autem consequuntur delectus enim error hic
-                    iusto necessitatibus quae quibusdam,
-                    quo, rerum totam voluptatum? Commodi officiis possimus quam quisquam sapiente!</p>
-            </div>
-        </div>
-        <div class="flex" id="answer">
-            <div class="profile">
-                <img src="../../assets/img/person_1.jpg" alt="author" />
-                <small id="author">Author</small>
-            </div>
-            <div class="answer-body">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. A architecto autem consequuntur delectus enim error hic
-                    iusto necessitatibus quae quibusdam,
-                    quo, rerum totam voluptatum? Commodi officiis possimus quam quisquam sapiente!</p>
+                <p>At Andela main hq</p>
             </div>
         </div>
 
