--- a/ui/index.html
+++ b/ui/index.html
@@ -16,7 +16,7 @@
     <div class="nav">
       <div class="nav-header">
         <div class="nav-title">
-          <a href="../ui/"><h3>Questioner</h3></a>
+          <a href="/questioner/ui/"><h3>Questioner</h3></a>
         </div>
       </div>
       <div class="nav-btn">
