add link to home page in signup button and edit text from continue to sign up

--- a/ui/signup/index.html
+++ b/ui/signup/index.html
@@ -16,7 +16,7 @@
 <div class="nav">
     <div class="nav-header">
         <div class="nav-title">
-            <a href="/"><h3>Questioner</h3></a>
+            <a href="../"><h3>Questioner</h3></a>
         </div>
     </div>
 </div>
@@ -27,7 +27,7 @@
             <h1 class="auth-title">Sign up</h1>
             <input type="text" class="auth-input" placeholder="Email Adress" autofocus>
             <input type="password" class="auth-input" placeholder="Password">
-            <input type="submit" value="Continue" class="auth-button">
+            <input type="" value="Sign up" class="auth-button" onclick="location.href = '../';">
             <div class="auth-more">
                 <p><a href="../login/"><small>Already have an account? Log in</small></a></p>
             </div>
