fix logo link and form button text

--- a/ui/reset/index.html
+++ b/ui/reset/index.html
@@ -16,7 +16,7 @@
 <div class="nav">
     <div class="nav-header">
         <div class="nav-title">
-            <a href="/"><h3>Questioner</h3></a>
+            <a href="../"><h3>Questioner</h3></a>
         </div>
     </div>
 </div>
@@ -27,7 +27,7 @@
             <h1 class="auth-title">Reset Password</h1>
             <p><small>Enter your email and we'll send you a reset link</small></p>
             <input type="email" class="auth-input" placeholder="Email Address" autofocus>
-            <input type="submit" value="Continue" class="auth-button">
+            <input type="" value="Reset password" class="auth-button" onclick="location.href = '../';">
             <div class="auth-more">
                 <p><a href="../signup/"><small>No account? Sign up</small></a></p>
                 <p><a href="../login/"><small>Go back to Log in</small></a></p>
