--- a/ui/admin/index.html
+++ b/ui/admin/index.html
@@ -17,7 +17,7 @@
 <div class="nav">
     <div class="nav-header">
         <div class="nav-title">
-            <a href="/"><h3>Questioner</h3></a>
+            <a href="../"><h3>Questioner</h3></a>
         </div>
     </div>
     <div class="nav-btn">
@@ -27,8 +27,11 @@
     </div>
     <input type="checkbox" id="nav-check" />
     <div class="nav-links">
-        <a href="../login/">Log out</a>
-    </div>
+        <a href="../profile/">User profile</a> 
+        <a href="../admin/">Admin profile</a> 
+        <a href="../login/">Log in</a> 
+        <a href="../signup/">Sign up</a>
+      </div>
     <div class="nav-links" id="profile"></div>
 </div>
 
