--- a/ui/admin/new/index.html
+++ b/ui/admin/new/index.html
@@ -17,7 +17,7 @@
 <div class="nav">
     <div class="nav-header">
         <div class="nav-title">
-            <a href="../"><h3>Questioner</h3></a>
+            <a href="../../"><h3>Questioner</h3></a>
         </div>
     </div>
     <div class="nav-btn">
