--- a/ui/profile/index.html
+++ b/ui/profile/index.html
@@ -27,7 +27,10 @@
     </div>
     <input type="checkbox" id="nav-check" />
     <div class="nav-links">
-        <a href="../login/">Log out</a>
+        <a href="../profile/">User profile</a> 
+        <a href="../admin/">Admin profile</a> 
+        <a href="../login/">Log in</a> 
+        <a href="../signup/">Sign up</a>
     </div>
     <div class="nav-links" id="profile"></div>
 </div>
