remove voting buttons for now

--- a/ui/meetup/question/index.html
+++ b/ui/meetup/question/index.html
@@ -38,7 +38,7 @@
 <div class="container">
     <div id="question-details">
             <div class="flex" id="question">
-                <div class="vote">
+                <!-- <div class="vote">
                     <div class="up" onclick="upVote">
                         <i class="fa fa-caret-up fa-2x" aria-hidden="true"></i>
                     </div>
@@ -46,7 +46,7 @@
                     <div class="down" onclick="downVote">
                         <i class="fa fa-caret-down fa-2x" aria-hidden="true"></i>
                     </div>
-                </div>
+                </div> -->
                 <div class="profile">
                     <img src="../../assets/img/person_1.jpg" alt="author" />
                     <small id="author">Author</small>
@@ -56,6 +56,7 @@
                 </div>
             </div>
 
+            <div id="comment-count">2 comments</div>
             <div class="flex" id="answer">
                 <div class="profile">
                     <img src="../../assets/img/person_1.jpg" alt="author" />
