[starts #163216403] replace 'date' with an actual date and place it under the header

--- a/ui/index.html
+++ b/ui/index.html
@@ -40,37 +40,37 @@
               <div class="grid-item main">
                   <img src="assets/img/image_4.jpg" alt="meetup image">
                   <div class="text-block">
-                      <small>date</small>
                       <a href="meetup/"><h2>Main Meetup</h2></a>
+                      <small>20/02/2019</small>
                       <p>This is a main meetup and will be featured at the top of the upcoming meetups page</p>
                   </div>
               </div>
               <div class="grid-item featured">
                   <img src="assets/img/img_1.jpg" alt="meetup image">
                   <div class="text-block">
-                      <small>date</small>
                       <a href="meetup/"><h4>Featured Meetup</h4></a>
+                      <small>12/01/2019</small>
                   </div>
               </div>
               <div class="grid-item featured">
                   <img src="assets/img/image_8.jpg" alt="meetup image">
                   <div class="text-block">
-                      <small>date</small>
                       <a href="meetup/"><h4>Featured Meetup</h4></a>
+                      <small>12/01/2019</small>
                   </div>
               </div>
               <div class="grid-item featured">
                   <img src="assets/img/image_9.jpg" alt="meetup image">
                   <div class="text-block">
-                      <small>date</small>
                       <a href="meetup/"><h4>Featured Meetup</h4></a>
+                      <small>12/01/2019</small>
                   </div>
               </div>
               <div class="grid-item featured">
                   <img src="assets/img/img_2.jpg" alt="meetup image">
                   <div class="text-block">
-                      <small>date</small>
                       <a href="meetup/"><h4>Featured Meetup</h4></a>
+                      <small>12/01/2019</small>
                   </div>
               </div>
           </div>
