replace 'date' with an actual date and place it under the header

--- a/ui/meetup/index.html
+++ b/ui/meetup/index.html
@@ -40,8 +40,8 @@
           <div class="grid-item main header">
               <img src="../assets/img/image_4.jpg" alt="meetup image">
               <div class="text-block">
-                  <small>date</small>
                   <h2>Main Meetup</h2>
+                  <small>12/01/2019</small>
                   <button class="cta-going" onclick="">I'm going!</button>
               </div>
           </div>
