replace 'Author' with real (random placeholder) names

--- a/ui/meetup/question/index.html
+++ b/ui/meetup/question/index.html
@@ -49,7 +49,7 @@
                 </div> -->
                 <div class="profile">
                     <img src="../../assets/img/person_1.jpg" alt="author" />
-                    <small id="author">Author</small>
+                    <small id="author">Jane</small>
                 </div>
                 <div class="question-body">
                     <p>Where exactly will this meetup be?</p>
@@ -60,7 +60,7 @@
             <div class="flex" id="answer">
                 <div class="profile">
                     <img src="../../assets/img/person_1.jpg" alt="author" />
-                    <small id="author">Author</small>
+                    <small id="author">Mercy</small>
                 </div>
                 <div class="answer-body">
                     <p>At Andela offices, behind TRM</p>
@@ -69,7 +69,7 @@
         <div class="flex" id="answer">
             <div class="profile">
                 <img src="../../assets/img/person_1.jpg" alt="author" />
-                <small id="author">Author</small>
+                <small id="author">Cathy</small>
             </div>
             <div class="answer-body">
                 <p>At Andela main hq</p>
