[starts #163218628] fix signup redirection to dashboard

--- a/ui/signup/index.html
+++ b/ui/signup/index.html
@@ -27,7 +27,7 @@
             <h1 class="auth-title">Sign up</h1>
             <input type="text" class="auth-input" placeholder="Email Adress" autofocus>
             <input type="password" class="auth-input" placeholder="Password">
-            <input type="" value="Sign up" class="auth-button" onclick="location.href = '../';">
+            <input type="" value="Sign up" class="auth-button" onclick="location.href = '../profile';">
             <div class="auth-more">
                 <p><a href="../login/"><small>Already have an account? Log in</small></a></p>
             </div>
