[finishes #163218628] fix login redirection to dashboard

--- a/ui/login/index.html
+++ b/ui/login/index.html
@@ -27,7 +27,7 @@
             <h1 class="auth-title">Log in</h1>
             <input type="text" class="auth-input" placeholder="Email Adress" autofocus>
             <input type="password" class="auth-input" placeholder="Password">
-            <input type="" value="Log in" class="auth-button" onclick="location.href = '../';">
+            <input type="" value="Log in" class="auth-button" onclick="location.href = '../profile';">
             <div class="auth-more">
                 <p><a href="../signup/"><small>No account? Sign up</small></a></p>
                 <p><a href="../reset/"><small>Forgot password? Reset</small></a></p>
